logs/nflvid.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/enum'...
Listing './lib/python3.5/site-packages/enum34-1.1.6.dist-info'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/nfldb'...
Compiling './lib/python3.5/site-packages/nfldb/query.py'...
***   File "./lib/python3.5/site-packages/nfldb/query.py", line 213
    return max(counts.items(), key=lambda (_, count): count)[0]
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nfldb/sql.py'...
***   File "./lib/python3.5/site-packages/nfldb/sql.py", line 204
    return filter(lambda (f, t, d): d is not None,
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nfldb-0.2.17.egg-info'...
Listing './lib/python3.5/site-packages/nflgame'...
Listing './lib/python3.5/site-packages/nflgame/gamecenter-json'...
Listing './lib/python3.5/site-packages/nflgame-1.2.20.egg-info'...
Listing './lib/python3.5/site-packages/nflvid'...
Compiling './lib/python3.5/site-packages/nflvid/__init__.py'...
***   File "./lib/python3.5/site-packages/nflvid/__init__.py", line 614
    except subprocess.CalledProcessError, e:
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nflvid/pbp-xml'...
Listing './lib/python3.5/site-packages/nflvid-0.2.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psycopg2'...
Listing './lib/python3.5/site-packages/psycopg2/.libs'...
Listing './lib/python3.5/site-packages/psycopg2/tests'...
Listing './lib/python3.5/site-packages/psycopg2-2.7.3.2.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/doc'...
Listing './share/doc/nfldb'...
Listing './share/doc/nfldb/doc'...
Listing './share/doc/nflgame'...
Listing './share/doc/nflgame/doc'...
Listing './share/doc/nflvid'...
Listing './share/doc/nflvid/doc'...
Listing './share/nfldb'...
Listing './share/python-wheels'...
